[gd_scene load_steps=9 format=3 uid="uid://dpn51wp2itha1"]

[ext_resource type="Script" path="res://EnemyBubble.gd" id="1_2prsk"]
[ext_resource type="Texture2D" uid="uid://d0dlnibf0blig" path="res://assets/bact_attk.png" id="3_fkvsx"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fwdbu"]
radius = 4.16668

[sub_resource type="AtlasTexture" id="AtlasTexture_47vb4"]
atlas = ExtResource("3_fkvsx")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_4imdy"]
atlas = ExtResource("3_fkvsx")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_p30d2"]
atlas = ExtResource("3_fkvsx")
region = Rect2(16, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_45l40"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_47vb4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4imdy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p30d2")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_gxil5"]
radius = 4.59741

[node name="Bubble" type="CharacterBody2D" groups=["Bubble"]]
scale = Vector2(1.66398, 1.66398)
collision_layer = 2
script = ExtResource("1_2prsk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fwdbu")

[node name="BubbleTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_45l40")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.337488

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
shape = SubResource("CircleShape2D_gxil5")

[connection signal="timeout" from="BubbleTimer" to="." method="_on_bubble_timer_timeout"]
[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
